# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "rust-http"
version = "0.1.0"
authors = ["AbduRahman <abdrahaman.dev@gmail.com"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
flate2 = { version = "1.0.17", features = ["default"] }

[dev-dependencies]
pretty_assertions = "1.3.0"                         # nicer looking assertions
